<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.customer.DaftarMerchantActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:padding="15dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iconBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/back"
            app:tint="@color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/regist_merchant"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAlignment="center"
            android:gravity="center"/>
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtBack">
            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_merchant" />
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Identitas Pribadi"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:hint="@string/nik"
                app:boxStrokeColor="@color/green"
                app:hintTextColor="@color/green">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtNik"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:inputType="number"
                    android:maxLength="16"
                    android:drawableStart="@drawable/ic_id_card"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:hint="@string/nama_hint"
                app:boxStrokeColor="@color/green"
                app:hintTextColor="@color/green">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtNamaLengkap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:inputType="text"
                    android:drawableStart="@drawable/ic_user"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hp_hint"
                app:boxStrokeColor="@color/green"
                app:hintTextColor="@color/green">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtNoHp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:inputType="number"
                    android:maxLength="13"
                    android:drawableStart="@drawable/ic_phone"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:hint="@string/email_hint"
                app:boxStrokeColor="@color/green"
                app:hintTextColor="@color/green">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/tmp"
                app:boxStrokeColor="@color/green"
                app:hintTextColor="@color/green">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtTmpLahir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:inputType="text"
                    android:drawableStart="@drawable/ic_home"
                    android:drawableTint="@color/black"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="Tanggal Lahir"
                app:boxStrokeColor="@color/green"
                app:hintTextColor="@color/green">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtTglLahir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="true"
                    android:inputType="none"
                    android:drawableStart="@drawable/ic_date"
                    android:drawablePadding="10dp"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jk"
                android:layout_marginTop="10dp"/>
            <RadioGroup
                android:id="@+id/pilihJk"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/L"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50dp"
                    android:text="@string/l" />
                <RadioButton
                    android:id="@+id/P"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/p"/>
            </RadioGroup>
            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alamat_l"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtLayoutDesa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/kelurahanModel"
                    app:boxStrokeColor="@color/green"
                    app:hintTextColor="@color/green">
                    <AutoCompleteTextView
                        android:id="@+id/txtDesa"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:inputType="text"
                        android:paddingLeft="15dp"
                        android:drawablePadding="10dp"
                        android:imeOptions="actionNext"
                        android:drawableStart="@drawable/ic_location"
                        android:textColor="@color/black"/>
                </com.google.android.material.textfield.TextInputLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewKel"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/border_recylerview"
                    android:overScrollMode="ifContentScrolls"
                    android:visibility="gone" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:hint="@string/rt"
                    app:boxStrokeColor="@color/green"
                    app:hintTextColor="@color/green">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtRtRw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:inputType="text"
                        android:drawableStart="@drawable/ic_location"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutDetAlamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/detAlamat"
                    android:layout_marginTop="10dp"
                    app:boxStrokeColor="@color/green"
                    app:hintTextColor="@color/green">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtDetAlamat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minLines="3"
                        android:gravity="top|start"
                        android:inputType="textMultiLine"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Detail Usaha"
                android:layout_marginTop="10dp"
                android:textStyle="bold"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:hint="@string/nama_usaha"
                app:boxStrokeColor="@color/green"
                app:hintTextColor="@color/green">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtNamaUsaha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:inputType="text"
                    android:drawableStart="@drawable/ic_food"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/desk_usaha"
                android:layout_marginTop="10dp"
                app:boxStrokeColor="@color/green"
                app:hintTextColor="@color/green">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/deskUsaha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="3"
                    android:gravity="top|start"
                    android:inputType="textMultiLine"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/timeInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/buka"
                    app:boxStrokeColor="@color/green"
                    app:hintTextColor="@color/green">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtBuka"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:drawableStart="@drawable/ic_time"
                        android:drawablePadding="10dp"
                        android:focusable="false"
                        android:inputType="none"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/timeInputLayout1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:hint="@string/tutup"
                    app:boxStrokeColor="@color/green"
                    app:hintTextColor="@color/green">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtTutup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="false"
                        android:inputType="none"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_time"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="Pilih File"
                app:boxStrokeColor="@color/green"
                app:hintTextColor="@color/green">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pilihFile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_attach_file"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/black"
                    android:textColor="@color/black"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnDaftarMerchant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/green"
                android:text="@string/daftar"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>